Carousel overflow corrected
Edited: _2Bhip_styles.css, index.html, extensions/_2Bhip_extension.js

--- a/_2Bhip_styles.css
+++ b/_2Bhip_styles.css
@@ -778,6 +778,7 @@ HOME PAGE
 	width: 936px;
 	margin: auto;
 	background-color: #09F;
+	overflow:hidden;
 }
 
 .relativeMainBannerContainer {
@@ -859,6 +860,7 @@ HOME PAGE
 	width: 960px;
 	margin: auto;
 	position: relative;
+	overflow: hidden;
 }
 
 .subCarouselCategoryContainer {
@@ -1046,6 +1048,7 @@ PRODUCT STYLES / CAROUSELS
 	margin: auto;
 	position: relative;
 	z-index: 0;
+	overflow: hidden;
 }
 
 .homePageTempCarousel1 { 
